# bmi088-rs

./: Cargo.toml  README.md  imu_client.py  requirements.txt
.github/workflows/: build.yml
examples/: bench_imu.rs  read_imu.rs
src/: fusion.rs  lib.rs
